# rustdesk-server

./: .env  .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  PROJECT_COMPLETION_SUMMARY.md  README-DE.md  README-NL.md  README-TW.md  README-ZH.md  README.md  UBUNTU_SETUP.md  UBUNTU_TROUBLESHOOTING.md  USER_DEVICE_MANAGEMENT.md  USER_MANAGEMENT_FEATURES.md  alert_rules.yml  blacklist.txt  blocklist.txt  build.rs  compile_check.db  compile_check.db-wal  config.toml  course.md  db_v2.sqlite3  development.env  docker-compose.override.yml  docker-compose.yml  fix_ubuntu_build.sh  hbbr.toml  hbbs.toml  id-relay-set.md  k8s_deployment.yaml  logging.conf  mod.rs  nginx.conf  production.env  prometheus.yml  proto3_to_capnp_migration_plan.md  (+7 more)
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: ask-a-question.md  bug_report.md  feature_request.md
.github/workflows/: HBBS.yaml  build.yaml  codex.yml  comansrustdesk1-AutoDeployTrigger-135cb9c8-621d-4b32-ba33-d6752611b1f9.yml  ghcr.yml  test-selfhosted.yaml  test.yml
.windsurf/: config.json  development.md
benches/: proto_capnp_comparison.rs  simple_performance.rs
db_v2/migrations/: 20230720124454_peer.sql
debian/: README.source  changelog  control.tpl  copyright  rustdesk-server-hbbr.install  rustdesk-server-hbbr.postinst  rustdesk-server-hbbr.postrm  rustdesk-server-hbbr.prerm  rustdesk-server-hbbs.install  rustdesk-server-hbbs.postinst  rustdesk-server-hbbs.postrm  rustdesk-server-hbbs.prerm  rustdesk-server-utils.install
docker/: Dockerfile
docker-classic/: Dockerfile
docker/rootfs/etc/s6-overlay/s6-rc.d/hbbr/: dependencies  run
docker/rootfs/etc/s6-overlay/s6-rc.d/hbbs/: dependencies  run
docker/rootfs/etc/s6-overlay/s6-rc.d/key-secret/: up  up.real
docker/rootfs/etc/s6-overlay/s6-rc.d/set-user/: up  up.real
docs/: environment-variables.md
helm-charts/: Chart.yaml  values.yaml
helm-charts/templates/: NOTES.txt  _helpers.tpl  hbbr-deployment.yaml  hbbr-secret.yaml  hbbr-service.yaml  hbbs-config.yaml  hbbs-deployment.yaml  hbbs-pvc.yaml  hbbs-service.yaml  serviceaccount.yaml
helm-charts/templates/tests/: test-connection.yaml
kubernetes/: example.yaml
libs/: kubesphere-installer.yaml
libs/core-common/: Cargo.toml  build.rs
libs/core-common/examples/: config.rs
libs/core-common/protos/: rendezvous.capnp  rendezvous.proto
libs/core-common/src/: config.rs  lib.rs  password_security.rs  rendezvous_codec.rs  udp.rs
libs/hbb_common/: Cargo.toml  build.rs
libs/hbb_common/protos/: message.proto  rendezvous.proto
libs/hbb_common/src/: config.rs  fs.rs  keyboard.rs  lib.rs  proxy.rs  socket_client.rs  tcp.rs  udp.rs
libs/hbb_common/src/platform/: linux.rs
nat-client/: Cargo.toml  README.md  build.rs  config.example.toml  config.toml
nat-client/src/: auth.rs  config.rs  ipc.rs  lan.rs  main.rs  port_forward.rs  rendezvous_mediator.rs
nat-client/src/ui/: app.rs  mod.rs  tray.rs
nat-client/ui/: main.slint
protos/: message.proto  mod.rs
rcd/: rustdesk-hbbr  rustdesk-hbbs
scripts/console/: audits.py  common.py  devices.py  users.py
spk/: INFO  pubkey
spk/WIZARD_UIFILES/: install_uifile
spk/scripts/: RustDesk_Server.sc  installer  postuninst  start-stop-status
src/: admin_http.rs  api.rs  api.rs.backup  capnp_serialization.rs  capnp_transport.rs  codec.rs  common.rs  database.rs  database_simple.rs  database_v2.rs  device_api.rs  device_pages.rs  hbbr.rs  lib.rs  lic.rs  main - 副本.rs  main.rs  mod.rs  password_reset.rs  peer.rs  relay_server.rs  rendezvous_server.rs  rendezvous_server_capnp.rs  rendezvous_server_commented.rs  sled_async.rs  subscription.rs  utils.rs  version.rs  web.rs
src/hbbf/: main.rs
src/hbbr/: main.rs  relay_server.rs
src/proto/: mod.rs
src/protos/: message.rs
src/views/: mod.rs
static/: index.html
systemd/: rustdesk-hbbr.service  rustdesk-hbbs.service
templates/: admin_subscriptions.html  dashboard.html  devices.html  forgot_password.html  layout.html  login.html  monitor.html  register.html  reset_password.html  subscription.html  users.html
tests/: basic_functionality_tests.rs  device_management_tests.rs  nat_punching_tests.rs  protobuf_recursion.rs  protocol_compatibility_tests.rs  server_protection_process.rs
ui/: Cargo.toml  build.rs  setup.nsi  tauri.conf.json
ui/html/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
ui/icons/: icon.icns
ui/setup/service/: run.cmd
ui/src/: lib.rs  main.rs
ui/src/adapter/: mod.rs
ui/src/adapter/service/: mod.rs  windows.rs
ui/src/adapter/view/: desktop.rs  mod.rs
ui/src/usecase/: mod.rs  presenter.rs  service.rs  view.rs  watcher.rs
