[package]
name = "hbbs"
version = "1.1.3"
authors = ["open-trade <info@opentradesolutions.com>"]
edition = "2018"
build= "build.rs"

[[bin]]
name = "hbbr"
path = "src/hbbr.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hbb_common = { path = "libs/hbb_common" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
clap = "2.33"
rust-ini = "0.16"
reqwest = { version = "0.10", features = ["json", "blocking"] }
machine-uid = "0.2"
mac_address = "1.1"
whoami = "0.9"
base64 = "0.13"
cryptoxide = "0.3"

[build-dependencies]
hbb_common = { path = "libs/hbb_common" }

[workspace]
members = ["libs/hbb_common"]

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
version = "0.15"
